# mkdocs-literate-nav

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
.tools/: ci.sh  copier-answers.yml  release.sh
.tools/hooks/: pre-commit
docs/: reference.md  requirements.txt
mkdocs_literate_nav/: exceptions.py  parser.py  plugin.py  util.py
requirements/: requirements-docs.txt
tests/: conftest.py  test_parser.py  test_plugin.py
tests/markdown_to_nav/: test_basic.yml  test_broken_before_marker.yml  test_element_after.yml  test_empty.yml  test_empty_section.yml  test_fancy_link.yml  test_multiple_nav.yml  test_multiple_nav_and_others.yml  test_multiple_unmarked_nav.yml  test_nav_after_gap.yml  test_nav_last.yml  test_no_title.yml  test_obscured_link.yml  test_obscured_section.yml  test_section_with_link.yml  test_special_chars.yml  test_text_after.yml
tests/markdown_to_nav/nested/: test_basic.yml  test_borgs.yml  test_borgs_implicit_index.yml  test_dir_without_slash.yml  test_go_up.yml  test_go_up_too_much.yml  test_missing.yml  test_nested.yml  test_no_recursion.yml  test_recursion.yml  test_repeated.yml
tests/markdown_to_nav/wildcard/: test_basic.yml  test_dirs_then_files.yml  test_no_files.yml  test_no_repeat_with_directory.yml  test_wildcard_under_index.yml
tests/nav/: test_basic.yml  test_broken_before_marker.yml  test_element_after.yml  test_empty_section.yml  test_fancy_link.yml  test_multiple_nav.yml  test_obscured_link.yml  test_obscured_section.yml  test_preserves_url.yml  test_section_with_link.yml  test_text_after.yml  test_unquote.yml
tests/nav/hybrid/: test_empty.yml  test_files_in_subsection.yml  test_flattened_files_in_subsection.yml  test_from_readme.yml  test_keeps_original_nav.yml  test_literate_in_subsection.yml  test_preserves_url.yml  test_repeated.yml  test_slash_with_nav.yml  test_slash_without_nav.yml  test_unquote_noop.yml  test_very_nested.yml  test_wildcard_slash.yml
tests/nav/nested/: test_borgs.yml  test_go_up.yml  test_implicit_index_as_nav.yml  test_implicit_index_borgs.yml  test_nested.yml  test_recursion.yml  test_repeated.yml  test_unquote.yml
tests/nav/wildcard/: test_basic.yml  test_dirs_then_files.yml  test_from_readme.yml  test_implicitly_recursive.yml  test_multidir_file.yml  test_no_files.yml  test_no_repeat_with_directory.yml  test_non_matching.yml  test_omits_competing_parent_first.yml  test_omits_competing_subdir_first.yml  test_omits_in_subdir.yml  test_omits_in_superdir.yml  test_skips_nav_file.yml  test_wildcard_under_index.yml
tests/resolve_directories_in_nav/: test_empty.yml  test_files_in_subsection.yml  test_flattened_files_in_subsection.yml  test_keeps_original_nav.yml  test_literate_in_subsection.yml  test_nav_and_literate.yml  test_repeated.yml  test_slash_with_nav.yml  test_slash_without_nav.yml  test_very_nested.yml
tests/test_markdown_to_nav/: test_basic.yaml  test_broken_before_marker.yaml  test_element_after.yaml  test_empty.yaml  test_empty_section.yaml  test_fancy_link.yaml  test_multiple_nav.yaml  test_multiple_unmarked_nav.yaml  test_nav_after_gap.yaml  test_nav_last.yaml  test_no_title.yaml  test_obscured_link.yaml  test_obscured_section.yaml  test_section_with_link.yaml  test_text_after.yaml
