[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-literate-nav"
description = "MkDocs plugin to specify the navigation in Markdown instead of YAML"
readme = "README.md"
license = "MIT"
keywords = ["mkdocs", "mkdocs-plugin"]
authors = [
    {name = "Oleh Prypin", email = "oleh@pryp.in"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "mkdocs >=1.4.1",
]

[project.urls]
Documentation = "https://oprypin.github.io/mkdocs-literate-nav/"
Source = "https://github.com/oprypin/mkdocs-literate-nav"
Issues = "https://github.com/oprypin/mkdocs-literate-nav/issues"
History = "https://github.com/oprypin/mkdocs-literate-nav/releases"

[project.entry-points."mkdocs.plugins"]
literate-nav = "mkdocs_literate_nav.plugin:LiterateNavPlugin"

[tool.hatch.version]
path = "mkdocs_literate_nav/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/mkdocs_literate_nav", "/tests"]

[tool.hatch.env]
requires = [
    "hatch-mkdocs",
    "hatch-pip-compile",
]

[tool.hatch.envs.default.scripts]
all = [
    "hatch run style:fix",
    "hatch run types:check",
    "hatch run test:test",
]

[tool.hatch.envs.test]
dependencies = [
    "pytest",
    "pytest-golden",
]
[tool.hatch.envs.test.scripts]
test = [
    "pytest -q",
]

[tool.hatch.envs.types]
dependencies = [
    "mypy",
    "types-Markdown >=3.4.2",
]
[tool.hatch.envs.types.scripts]
check = [
    "mypy mkdocs_literate_nav"
]

[tool.hatch.envs.style]
skip-install = true
dependencies = [
    "ruff",
]
[tool.hatch.envs.style.scripts]
fix = [
    "ruff check --fix mkdocs_literate_nav tests",
    "format",
]
format = [
    "ruff format -q mkdocs_literate_nav tests",
]

[tool.hatch.env.collectors.mkdocs.docs]
[tool.hatch.envs.docs]
type = "pip-compile"
pip-compile-hashes = false

[tool.ruff]
line-length = 100
select = [
    "I",
    "F", "W", "E", "UP", "YTT", "C4", "DTZ", "FA", "ISC", "PIE", "T20", "RSE", "TCH",
    "B002", "B003", "B005", "B007", "B009", "B012", "B013", "B014", "B015", "B018", "B020", "B021", "B023", "B026", "B033", "B034", "B905",
    "COM818",
    "PERF101",
    "PGH002", "PGH004", "PGH005",
    "FLY002",
    "PLC", "PLE", "PLR0124", "PLR0133", "PLR0206", "PLR0402", "PLR1701", "PLR1722", "PLW0120", "PLW0127", "PLW0129", "PLW0131", "PLW0406", "PLW0602", "PLW0603", "PLW0711",
    "RUF001", "RUF005", "RUF007", "RUF010", "RUF013", "RUF100", "RUF200",
    "SIM101", "SIM107", "SIM201", "SIM202", "SIM208", "SIM210", "SIM211", "SIM300", "SIM401", "SIM910",
]
ignore = ["E501", "E731"]
[tool.ruff.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.mypy]
warn_unreachable = true
allow_redefinition = true

[tool.pytest.ini_options]
addopts = "--tb=native"
enable_assertion_pass_hook = true
filterwarnings = ["ignore::DeprecationWarning:.*:",
                  "default::DeprecationWarning:mkdocs_literate_nav.*:"]
testpaths = ["tests"]
